# ESP32_Project

./: .gitignore  ESP32.xmind  README.md  S2模板项目架构.xmind
template-app/components/drv_comm/: CMakeLists.txt  drv_comm.c  drv_i2c.c  drv_mqtt.c  drv_simiic.c  drv_sta_client.c  drv_sta_server.c  drv_uart.c  drv_wifi.c
template-app/components/drv_comm/include/: drv_i2c.h  drv_mqtt.h  drv_simiic.h  drv_sta_client.h  drv_sta_server.h  drv_uart.h  drv_wifi.h
template-app/components/drv_hardware/: CMakeLists.txt  drv_adc.c  drv_adxl345.c  drv_bh1750.c  drv_gpio.c  drv_hardware.c  drv_multiButton.c  drv_sht20.c
template-app/components/drv_hardware/include/: drv_adc.h  drv_adxl345.h  drv_bh1750.h  drv_gpio.h  drv_multiButton.h  drv_sht20.h
template-app/components/drv_task/: CMakeLists.txt  drv_task.c
template-app/components/drv_task/include/: drv_task.h
template-app/components/tools/: CMakeLists.txt  tools.cpp
template-app/components/tools/include/: tools.h
template-app/main/: CMakeLists.txt  main.c
